// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Duty Should render duty page 1`] = `
<div
  className="Duty"
>
  <Connect(CalendarContainer)
    canEditDutySettings={true}
    service={
      Object {
        "id": 42,
      }
    }
    settings={
      Object {
        "collection": Array [
          Object {
            "considerOtherSchedules": true,
            "duration": 5,
            "dutyOnHolidays": true,
            "dutyOnWeekends": true,
            "name": "release",
            "personsCount": 1,
            "role": null,
            "startDate": 2019-01-01T00:00:00.000Z,
          },
        ],
        "loading": false,
      }
    }
  />
</div>
`;

exports[`Duty Should render duty page without popups 1`] = `
<div
  className="Duty"
>
  <Connect(CalendarContainer)
    canEditDutySettings={true}
    service={
      Object {
        "id": 42,
      }
    }
    settings={
      Object {
        "collection": Array [
          Object {
            "considerOtherSchedules": true,
            "duration": 5,
            "dutyOnHolidays": true,
            "dutyOnWeekends": true,
            "name": "release",
            "personsCount": 1,
            "role": null,
            "startDate": 2019-01-01T00:00:00.000Z,
          },
        ],
        "loading": false,
      }
    }
  />
</div>
`;

exports[`Duty Should render duty page without popups and modal 1`] = `
<div
  className="Duty"
>
  <Connect(CalendarContainer)
    service={
      Object {
        "id": 42,
      }
    }
    settings={
      Object {
        "collection": Array [
          Object {
            "considerOtherSchedules": true,
            "duration": 5,
            "dutyOnHolidays": true,
            "dutyOnWeekends": true,
            "name": "release",
            "personsCount": 1,
            "role": null,
            "startDate": 2019-01-01T00:00:00.000Z,
          },
        ],
        "loading": false,
      }
    }
  />
</div>
`;
